--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gatsby-plugin-canonical-urls": "^5.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
+    "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-sass": "^6.13.1",
     "gatsby-plugin-typescript": "^5.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
@@ -31,6 +33,7 @@
     "postcss-import": "^16.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.79.4",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.13"
   },
