--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo && exit 1",
-    "deploy:dev": "gatsby build && gh-pages -d public -b deploy/DEV"
+    "deploy:dev": "gatsby build && gh-pages -d public -b develop"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
